2009-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Cache mogrify argument
	images so that they are only loaded once when mogrify is used to
	process multiple image files.

	* coders/dpx.c (WriteDPXImage): Fix leak of chroma image when
	subsampling to 4:2:2.

2009-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Expand @filename to a list
	of arguments.

2009-06-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImageCommand): Fix memory leak of
	output_directory string buffer, if it was used.

	* magick/utility.c (ExpandFilenames): Input wildcard file
	specifications with a subdirectory component such as
	"subdir/*.dpx" were not working.

2009-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Invoke InitializeMagickRegistry().

	* magick/registry.c (RegistryInfo): There is no reason to expose
	the RegistryInfo structure in the public interface so it is moved
	to registry.c.
	(InitializeMagickRegistry): Add a function for initializing the
	magick registry.

2009-06-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CompareImageCommand): Report full error rather
	than rounded error in error reports since sometimes the value
	reported was rounded down to zero.

	* utilities/tests/hald-clut-transform.sh: New test to verify that
	Hald CLUT interpolation is working perfectly.

	* utilities/tests/hald-clut-identity.sh: Renamed from
	hald-clut.sh.

2009-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (RegisterJPEGImage): Fix typo which caused IJG
	library version to be shown for "JPG" format but not for "JPEG".
	Also use a more descriptive name for JPEG library.

	* magick/image.c (DescribeImage): Filter out spurious EXIF
	attributes which already exist because we previously accessed
	them.  We do a full EXIF dump later.
