@@ -21,6 +21,19 @@
 </tr>
 </table>
 <p>
+2009-06-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> rungm.sh.in: Fix environment variable issues noticed while
+        running the test suite under MinGW.
+
+  <LI> Makefile.am (TESTS_ENVIRONMENT): Fix environment variable issues
+        noticed while running the test suite under MinGW.
+
+  <LI> magick/hclut.c (HaldClutImage): Don't convert Cineon Log to RGB.
+
+</UL>
+<p>
 2009-06-25  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
