@@ -1,3 +1,13 @@
+2009-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* rungm.sh.in: Fix environment variable issues noticed while
+	running the test suite under MinGW.
+
+	* Makefile.am (TESTS_ENVIRONMENT): Fix environment variable issues
+	noticed while running the test suite under MinGW.
+
+	* magick/hclut.c (HaldClutImage): Don't convert Cineon Log to RGB.
+
 2009-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/command.c (MogrifyImageCommand): Cache mogrify argument
